--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
+  <header>
+    <div class="profile-page sidebar-collapse">
+      <nav class="navbar navbar-expand-lg fixed-top bg-primary" color-on-scroll="400">
+        <div class="container">
+
+        </div>
+      </nav>
+    </div>
+  </header>
 
 </body>
-
 
 </html>
