--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
     <div class="profile-page sidebar-collapse">
       <nav class="navbar navbar-expand-lg fixed-top bg-primary" color-on-scroll="400">
         <div class="container">
-          <div class="navbar-translate"><a class="navbar-brand" href="https://laurenemilyto.github.io/#" rel="tooltip" data-original-title="" title="">Kevin Gil</a>
+          <div class="navbar-translate"><a class="navbar-brand" href="https://kevogil.github.io/#" rel="tooltip" data-original-title="" title="">Kevin Gil</a>
             <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
+          </div>
+          <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="https://laurenemilyto.github.io/#about">About</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="https://laurenemilyto.github.io/#about">Projects</a></li>
+            </ul>
           </div>
         </div>
       </nav>
