--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
     </div>
   </header>
 
+  <div class="page-content">
+    <div>
+      <div class="profile-page">
+        <div class="wrapper">
+          <div class="page-header page-header-small" filter-color="#d0cece">
+            <div class="page-header-image" data-parallax="true" style="background-image: url(&quot;static/images/background.jpg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
