--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 <body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
   
-  <!-- Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager (noscript) 
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZ788R"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+   End Google Tag Manager (noscript) -->
 
   <header>
     <div class="profile-page sidebar-collapse">
