--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 <body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
   
-  <!-- Google Tag Manager (noscript) 
+  <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZ788R"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-   End Google Tag Manager (noscript) -->
+  <!-- End Google Tag Manager (noscript) -->
 
   <header>
     <div class="profile-page sidebar-collapse">
@@ -61,6 +61,15 @@
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="#d0cece">
             <div class="page-header-image" data-parallax="true" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+            <div class="container">
+              <div class="content-center">
+                <div class="cc-profile-image">
+                  <a href="https://www.linkedin.com/in/kevingil23/"><img src="./Lauren To&#39;s Portfolio_files/75763314" alt="Image"></a>
+                </div>
+                <div class="h2 title">Kevin Gil</div>
+                <p class="category text-white">Data Scientist | Data Analyst</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
