--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="#d0cece">
-            <div class="page-header-image" data-parallax="true" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+            <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
             <div class="container">
               <div class="content-center">
                 <div class="cc-profile-image">
