--- a/index.html
+++ b/index.html
@@ -37,6 +37,57 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
+
+
+
+  <header>
+    <div class="profile-page sidebar-collapse">
+        <nav class="navbar navbar-expand-lg fixed-top bg-primary" color-on-scroll="400">
+            <div class="container">
+                <div class="navbar-translate"><a class="navbar-brand" href="https://laurenemilyto.github.io/#" rel="tooltip" data-original-title="" title="">Lauren To</a>
+                    <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end" id="navigation">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link smooth-scroll" href="https://laurenemilyto.github.io/#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link smooth-scroll" href="https://laurenemilyto.github.io/#skills">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link smooth-scroll" href="https://laurenemilyto.github.io/#education">Education</a></li>
+                        <li class="nav-item"><a class="nav-link smooth-scroll" href="https://laurenemilyto.github.io/#experience">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link smooth-scroll" href="https://laurenemilyto.github.io/#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
+
+<div class="page-content">
+  <div>
+      <div class="profile-page">
+          <div class="wrapper">
+              <div class="page-header page-header-small" filter-color="#d0cece">
+                  <div class="page-header-image" data-parallax="true" style="background-image: url(&quot;static/images/background.jpg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+                  <div class="container">
+                      <div class="content-center">
+                          <div class="cc-profile-image">
+                              <a href="https://www.linkedin.com/in/lauren-to/"><img src="./Lauren To&#39;s Portfolio_files/75763314" alt="Image"></a>
+                          </div>
+                          <div class="h2 title">Lauren To</div>
+                          <p class="category text-white">Data Scientist | Data Analyst</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+                  
+
+
+
+
+
+<!--
   <header>
     <div class="profile-page sidebar-collapse">
       <nav class="navbar navbar-expand-lg fixed-top bg-primary" color-on-scroll="800">
@@ -54,6 +105,7 @@
       </nav>
     </div>
   </header>
+
 
   <div class="page-content">
     <div>
@@ -75,7 +127,7 @@
       </div>
     </div>
   </div>
-
+-->
 </body>
 
 </html>
