--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
       <div class="profile-page">
           <div class="wrapper">
               <div class="page-header page-header-small" filter-color="#d0cece">
-                  <div class="page-header-image" data-parallax="true" style="background-image: url(&quot;static/images/background.jpg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+                  <div class="page-header-image" data-parallax="true" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
                   <div class="container">
                       <div class="content-center">
                           <div class="cc-profile-image">
-                              <a href="https://www.linkedin.com/in/lauren-to/"><img src="./Lauren To&#39;s Portfolio_files/75763314" alt="Image"></a>
+                              <a href="https://www.linkedin.com/in/lauren-to/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQEOd_dKfueFeg/profile-displayphoto-shrink_200_200/0/1560307232011?e=1642636800&v=beta&t=SztmQq7Hl_7LXqH7yjb2-KVV8JvtCm-lhrNcuuji1R8" alt="Image"></a>
                           </div>
                           <div class="h2 title">Lauren To</div>
                           <p class="category text-white">Data Scientist | Data Analyst</p>
