--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <a href="https://www.linkedin.com/in/kevingil23/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQEOd_dKfueFeg/profile-displayphoto-shrink_200_200/0/1560307232011?e=1642636800&v=beta&t=SztmQq7Hl_7LXqH7yjb2-KVV8JvtCm-lhrNcuuji1R8" alt="Profile Image"></a>
                 </div>
                 <div class="h2 title">Kevin Gil</div>
-                <p class="category text-white">Financial Analyst | Data Analyst</p>
+                <p class="category text-black">Financial Analyst | Data Analyst</p>
               </div>
             </div>
           </div>
