--- a/index.html
+++ b/index.html
@@ -73,6 +73,49 @@
             </div>
           </div>
         </div>
+
+        <div class="section" id="about">
+          <div class="container">
+            <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
+              <div class="row">
+
+                <div class="col-lg-6 col-md-12">
+                  <div class="card-body">
+                    <div class="h4 mt-0 title">About</div>
+                    <p> Hi, I'm Kevin! </p>
+                  </div>
+                </div>
+
+                <div class="col-lg-6 col-md-12">
+                  <div class="card-body">
+                    <div class="h4 mt-0 title">Basic Information</div>
+
+                    <div class="row">
+                      <div class="col-sm-4"><strong class="text-uppercase">City:</strong></div>
+                      <div class="col-sm-8">Torrance, CA</div>
+                    </div>
+
+                    <div class="row mt-3">
+                      <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
+                      <div class="col-sm-8"><a href="mailto:laurenemto@gmail.com">kevingil23@gmail.com</a></div>
+                    </div>
+
+                    <div class="row mt-3">
+                      <div class="col-sm-4"><strong class="text-uppercase">LinkedIn:</strong></div>
+                      <div class="col-sm-8"><a href="https://www.linkedin.com/in/lauren-to/">https://www.linkedin.com/in/kevingil23/</a>
+                    </div>
+
+                    <div class="row mt-3">
+                      <div class="col-sm-4"><strong class="text-uppercase">GitHub:</strong></div>
+                      <div class="col-sm-8"><a href="https://github.com/laurenemilyto">https://github.com/kevogil</a></div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
