--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                     <div class="row mt-3">
                       <div class="col-sm-4"><strong class="text-uppercase">LinkedIn:</strong></div>
-                      <div class="col-sm-8"><a href="https://www.linkedin.com/in/lauren-to/">https://www.linkedin.com/in/kevingil23/</a>
+                      <div class="col-sm-8"><a href="https://www.linkedin.com/in/lauren-to/">https://www.linkedin.com/in/kevingil23/</a></div>
                     </div>
 
                     <div class="row mt-3">
