--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
 
                     <div class="row mt-3">
                       <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                      <div class="col-sm-8"><a href="mailto:laurenemto@gmail.com">kevingil23@gmail.com</a></div>
+                      <div class="col-sm-8"><a href="mailto:kevingil23@gmail.com">kevingil23@gmail.com</a></div>
                     </div>
 
                     <div class="row mt-3">
                       <div class="col-sm-4"><strong class="text-uppercase">LinkedIn:</strong></div>
-                      <div class="col-sm-8"><a href="https://www.linkedin.com/in/lauren-to/">https://www.linkedin.com/in/kevingil23/</a></div>
+                      <div class="col-sm-8"><a href="https://www.linkedin.com/in/kevingil23/">https://www.linkedin.com/in/kevingil23/</a></div>
                     </div>
 
                     <div class="row mt-3">
                       <div class="col-sm-4"><strong class="text-uppercase">GitHub:</strong></div>
-                      <div class="col-sm-8"><a href="https://github.com/laurenemilyto">https://github.com/kevogil</a></div>
+                      <div class="col-sm-8"><a href="https://github.com/kevogil">https://github.com/kevogil</a></div>
                     </div>
 
                   </div>
