--- a/index.html
+++ b/index.html
@@ -101,13 +101,8 @@
                     </div>
 
                     <div class="row mt-3">
-                      <div class="col-sm-4"><strong class="text-uppercase">LinkedIn:</strong></div>
-                      <div class="col-sm-8"><a href="https://www.linkedin.com/in/kevingil23/">https://www.linkedin.com/in/kevingil23/</a></div>
-                    </div>
-
-                    <div class="row mt-3">
-                      <div class="col-sm-4"><strong class="text-uppercase">GitHub:</strong></div>
-                      <div class="col-sm-8"><a href="https://github.com/kevogil">https://github.com/kevogil</a></div>
+                      <div class="col-sm-4"><strong class="text-uppercase">Degree:</strong></div>
+                      <div class="col-sm-8">B.A. Accounting & Auditing</div>
                     </div>
 
                   </div>
