--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
   <header>
     <div class="profile-page sidebar-collapse">
-      <nav class="navbar navbar-expand-lg fixed-top bg-primary" color-on-scroll="800">
+      <nav class="navbar navbar-expand-lg fixed-top bg-primary" color-on-scroll="400">
         <div class="container">
           <div class="navbar-translate"><a class="navbar-brand" href="https://kevogil.github.io/#" rel="tooltip" data-original-title="" title="">Kevin Gil</a>
             <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
           </div>
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav">
+            <ul class="nav-menu navbar">
               <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#about">About</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#projects">Projects</a></li>
             </ul>
@@ -82,7 +82,7 @@
                 <div class="col-lg-6 col-md-12">
                   <div class="card-body">
                     <div class="h4 mt-0 title">About</div>
-                    <p> Hi, I'm Kevin! </p>
+                    <p> Hi there, I'm Kevin! </p>
                   </div>
                 </div>
 
