--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
+  <!-- Navbar -->
   <header>
     <div class="profile-page sidebar-collapse">
       <nav class="navbar navbar-expand-lg fixed-top bg-primary" color-on-scroll="800">
@@ -55,7 +56,7 @@
     </div>
   </header>
 
-
+  <!-- Banner -->
   <div class="page-content">
     <div>
       <div class="profile-page">
@@ -74,6 +75,7 @@
           </div>
         </div>
 
+        <!-- About -->
         <div class="section" id="about">
           <div class="container">
             <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
@@ -102,7 +104,7 @@
 
                     <div class="row mt-3">
                       <div class="col-sm-4"><strong class="text-uppercase">Degree:</strong></div>
-                      <div class="col-sm-8">B.A. Accounting & Auditing</div>
+                      <div class="col-sm-8">Bachelor of Science (BS) - Accounting & Auditing</div>
                     </div>
 
                   </div>
@@ -111,6 +113,43 @@
             </div>
           </div>
         </div>
+
+        <!-- Projects -->
+        <div class="section" id="experience">
+          <div class="container cc-experience">
+            <div class="h4 text-center mb-4 title"> Projects</div>
+
+            <!-- Project 01 -->
+            <div class="card">
+
+              <div class="row">
+                <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+                  <div class="card-body"></div>
+                </div>
+                <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">
+                      <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
+                    </div>
+                    <div class="card-text">
+                      <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                      <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                      <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                      <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Spacer -->
+            <div class="card " style="margin-bottom: 20px; "></div>
+
+            <!-- Project Card 00 -->
+
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
