--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
 
             <!-- Project 01 -->
             <div class="card">
-
               <div class="row">
                 <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
                   <div class="card-body"></div>
@@ -145,7 +144,27 @@
             <!-- Spacer -->
             <div class="card " style="margin-bottom: 20px; "></div>
 
-            <!-- Project Card 00 -->
+            <!-- Project 02 -->
+            <div class="card">
+              <div class="row">
+                <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+                  <div class="card-body"></div>
+                </div>
+                <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">
+                      <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
+                    </div>
+                    <div class="card-text">
+                      <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                      <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                      <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                      <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
