--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           </div>
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
+              <li><a href="https://kevogil.github.io/#home" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#about">About</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#projects">Projects</a></li>
             </ul>
@@ -76,43 +77,45 @@
         </div>
 
         <!-- About -->
-        <div class="section" id="about">
-          <div class="container">
-            <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
-              <div class="row">
+        <section id="#home">
+          <div class="section" id="about">
+            <div class="container">
+              <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
+                <div class="row">
 
-                <div class="col-lg-6 col-md-12">
-                  <div class="card-body">
-                    <div class="h4 mt-0 title">About</div>
-                    <p> Hi there, I'm Kevin! </p>
+                  <div class="col-lg-6 col-md-12">
+                    <div class="card-body">
+                      <div class="h4 mt-0 title">About</div>
+                      <p> Hi there, I'm Kevin! </p>
+                    </div>
                   </div>
-                </div>
 
-                <div class="col-lg-6 col-md-12">
-                  <div class="card-body">
-                    <div class="h4 mt-0 title">Basic Information</div>
+                  <div class="col-lg-6 col-md-12">
+                    <div class="card-body">
+                      <div class="h4 mt-0 title">Basic Information</div>
 
-                    <div class="row">
-                      <div class="col-sm-4"><strong class="text-uppercase">City:</strong></div>
-                      <div class="col-sm-8">Torrance, CA</div>
+                      <div class="row">
+                        <div class="col-sm-4"><strong class="text-uppercase">City:</strong></div>
+                        <div class="col-sm-8">Torrance, CA</div>
+                      </div>
+
+                      <div class="row mt-3">
+                        <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
+                        <div class="col-sm-8"><a href="mailto:kevingil23@gmail.com">kevingil23@gmail.com</a></div>
+                      </div>
+
+                      <div class="row mt-3">
+                        <div class="col-sm-4"><strong class="text-uppercase">Degree:</strong></div>
+                        <div class="col-sm-8">Bachelor of Science (BS) - Accounting & Auditing</div>
+                      </div>
+
                     </div>
-
-                    <div class="row mt-3">
-                      <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                      <div class="col-sm-8"><a href="mailto:kevingil23@gmail.com">kevingil23@gmail.com</a></div>
-                    </div>
-
-                    <div class="row mt-3">
-                      <div class="col-sm-4"><strong class="text-uppercase">Degree:</strong></div>
-                      <div class="col-sm-8">Bachelor of Science (BS) - Accounting & Auditing</div>
-                    </div>
-
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </section>
 
         <!-- Projects -->
         <div class="section" id="experience">
