--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
-              <li><a href="https://kevogil.github.io/#home" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+              <li><a href="https://kevogil.github.io/#home class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#about">About</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#projects">Projects</a></li>
             </ul>
@@ -61,23 +61,25 @@
   <div class="page-content">
     <div>
       <div class="profile-page">
-        <div class="wrapper">
-          <div class="page-header page-header-small" filter-color="#d0cece">
-            <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;);"></div>
-            <div class="container">
-              <div class="content-center">
-                <div class="cc-profile-image">
-                  <a href="https://www.linkedin.com/in/kevingil23/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQEOd_dKfueFeg/profile-displayphoto-shrink_200_200/0/1560307232011?e=1642636800&v=beta&t=SztmQq7Hl_7LXqH7yjb2-KVV8JvtCm-lhrNcuuji1R8" alt="Profile Image"></a>
+        <section id="#home">
+          <div class="wrapper">
+            <div class="page-header page-header-small" filter-color="#d0cece">
+              <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;);"></div>
+              <div class="container">
+                <div class="content-center">
+                  <div class="cc-profile-image">
+                    <a href="https://www.linkedin.com/in/kevingil23/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQEOd_dKfueFeg/profile-displayphoto-shrink_200_200/0/1560307232011?e=1642636800&v=beta&t=SztmQq7Hl_7LXqH7yjb2-KVV8JvtCm-lhrNcuuji1R8" alt="Profile Image"></a>
+                  </div>
+                  <div class="h2 title">Kevin Gil</div>
+                  <p class="category text-white">Financial Analyst | Data Analyst</p>
                 </div>
-                <div class="h2 title">Kevin Gil</div>
-                <p class="category text-white">Financial Analyst | Data Analyst</p>
               </div>
             </div>
           </div>
-        </div>
+        </section>
 
         <!-- About -->
-        <section id="#home">
+        <section id="#about">
           <div class="section" id="about">
             <div class="container">
               <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
@@ -118,59 +120,61 @@
         </section>
 
         <!-- Projects -->
-        <div class="section" id="experience">
-          <div class="container cc-experience">
-            <div class="h4 text-center mb-4 title"> Projects</div>
+        <section id="#projects">
+          <div class="section" id="experience">
+            <div class="container cc-experience">
+              <div class="h4 text-center mb-4 title"> Projects</div>
 
-            <!-- Project 01 -->
-            <div class="card">
-              <div class="row">
-                <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
-                  <div class="card-body"></div>
-                </div>
-                <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">
-                      <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
-                    </div>
-                    <div class="card-text">
-                      <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                      <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                      <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                      <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+              <!-- Project 01 -->
+              <div class="card">
+                <div class="row">
+                  <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+                    <div class="card-body"></div>
+                  </div>
+                  <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                    <div class="card-body">
+                      <div class="h5">
+                        <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
+                      </div>
+                      <div class="card-text">
+                        <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                        <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                        <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                        <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
 
-            <!-- Spacer -->
-            <div class="card " style="margin-bottom: 20px; "></div>
+              <!-- Spacer -->
+              <div class="card " style="margin-bottom: 20px; "></div>
 
-            <!-- Project 02 -->
-            <div class="card">
-              <div class="row">
-                <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
-                  <div class="card-body"></div>
-                </div>
-                <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                  <div class="card-body">
-                    <div class="h5">
-                      <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
-                    </div>
-                    <div class="card-text">
-                      <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                      <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                      <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                      <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+              <!-- Project 02 -->
+              <div class="card">
+                <div class="row">
+                  <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+                    <div class="card-body"></div>
+                  </div>
+                  <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                    <div class="card-body">
+                      <div class="h5">
+                        <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
+                      </div>
+                      <div class="card-text">
+                        <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                        <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                        <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                        <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
 
+            </div>
           </div>
-        </div>
+        </section>
 
       </div>
     </div>
