--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
   <div class="page-content">
     <div>
       <div class="profile-page">
-        <div class="section" id="home">
-          <div class="wrapper">
+          <div class="wrapper" id="home">
             <div class="page-header page-header-small" filter-color="#d0cece">
               <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;);"></div>
               <div class="container">
@@ -76,7 +75,6 @@
               </div>
             </div>
           </div>
-        </div>
 
         <!-- About -->
         <div class="section" id="about">
