--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
           </div>
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
-              <li><a href="https://kevogil.github.io/#home" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#about">About</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#home">About</a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="https://kevogil.github.io/#projects">Projects</a></li>
             </ul>
           </div>
