--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   })(window,document,'script','dataLayer','GTM-MFZ788R');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Favicon -->
+  <link rel="icon" href="http://example.com/favicon.png">
+
 </head>
 
 <body id="top" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
@@ -69,7 +72,7 @@
                     <a href="https://www.linkedin.com/in/kevingil23/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQEOd_dKfueFeg/profile-displayphoto-shrink_200_200/0/1560307232011?e=1642636800&v=beta&t=SztmQq7Hl_7LXqH7yjb2-KVV8JvtCm-lhrNcuuji1R8" alt="Profile Image"></a>
                   </div>
                   <div class="h2 title">Kevin Gil</div>
-                  <p class="category text-white">Financial Analyst | Data Analyst</p>
+                  <p class="category text-white">Financial Analyst | Automation Nerd</p>
                 </div>
               </div>
             </div>
@@ -198,6 +201,13 @@
       </div>
     </div>
   </div>
+
+  <script src="./static/js/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+  <script src="./static/js/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+  <script src="./static/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
+  <script src="./static/js/now-ui-kit.js"></script>
+  <script src="./static/js/aos.js"></script>
+  <script src="./static/js/main.js"></script>
 
 </body>
 
