--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="content-center">
                   <div class="h2 title">Kevin Gil</div>
                   <p class="category text-white">Financial Analyst | Automation Nerd</p>
+                  <h1>Hallo, Wij zijn Occhio!</h1>
                 </div>
               </div>
             </div>
