--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
                 <div class="content-center">
                   <div class="h2 title">Kevin Gil</div>
                   <p class="category text-white">Financial Analyst | Automation Nerd</p>
-                  <h1>I am a Financial Analyst.</h1>
+
+                  <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+                  <h1>I am a
+                    <span
+                      class="txt-rotate"
+                      data-period="2000"
+                      data-rotate='[ " Financial Analyst.", "n Automation Nerd." ]'></span>
+                  </h1>
+
                 </div>
               </div>
             </div>
