--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;);"></div>
               <div class="container">
                 <div class="content-center">
-                  <div class="h2 title">Kevin Gil</div>
+                  <div class="h2 title">Hello, I am Kevin.</div>
                   <p class="category text-white">Financial Analyst | Automation Nerd</p>
 
                   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
@@ -258,9 +258,8 @@
   <script src="./static/js/aos.js"></script>
   -->
 
-  <!--
   <script src="./static/js/main.js"></script>
-  -->
+  
 
   
 
