--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
   <link href="./static/css/main.css" rel="stylesheet">
 
+  <script src="./static/js/main.js" defer></script>
+
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -249,20 +251,6 @@
     <!-- End of page-content -->
     </div>
   </div>
-
-  <!--
-  <script src="./static/js/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
-  <script src="./static/js/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
-  <script src="./static/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
-  <script src="./static/js/now-ui-kit.js"></script>
-  <script src="./static/js/aos.js"></script>
-  -->
-
-  <script src="./static/js/main.js"></script>
-  
-
-  
-
 </body>
 
 </html>
