--- a/index.html
+++ b/index.html
@@ -65,14 +65,13 @@
                   <div class="h2 title">Hello, I am Kevin.</div>
                   <p class="category text-white">Financial Analyst | Automation Nerd</p>
 
-                  <div class="typewriter">
+                  <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
                     <h1>I am a
                       <span
                         class="txt-rotate"
                         data-period="2000"
                         data-rotate='[ " Financial Analyst.", "n Automation Nerd." ]'></span>
                     </h1>
-                  </div>
 
                 </div>
               </div>
