--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
   <link href="static/css/bootstrap.min.css" rel="stylesheet">
   -->
 
-  <link rel="stylesheet" href="./static/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js" defer></script>
 
+  <!--
   <link href="./static/css/main.css" rel="stylesheet">
 
   <script src="./static/js/main.js" defer></script>
+  -->
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -63,14 +67,12 @@
               <div class="container">
                 <div class="content-center">
                   <div class="h2 title">Hello, I am Kevin.</div>
-                  <p class="category text-white">Financial Analyst | Automation Nerd</p>
 
                   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
                     <h1>I am a
-                      <span
-                        class="txt-rotate"
-                        data-period="2000"
-                        data-rotate='[ " Financial Analyst.", "n Automation Nerd." ]'></span>
+                      <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im VipulM.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+                        <span class="wrap"></span>
+                      </a>
                     </h1>
 
                 </div>
