--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 
                   <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
                     <h1>I am a
-                      <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im VipulM.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
-                        <span class="wrap"></span>
-                      </a>
+                      <span
+                        class="txt-rotate"
+                        data-period="2000"
+                        data-rotate='[ " Financial Analyst.", "n Automation Nerd." ]'></span>
                     </h1>
 
                 </div>
