--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js" defer></script>
 
-  <!--
-  <link href="./static/css/main.css" rel="stylesheet">
 
+  <link href="./static/css/main.css" rel="stylesheet">
   <script src="./static/js/main.js" defer></script>
-  -->
+  
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -67,15 +66,13 @@
               <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;);"></div>
               <div class="container">
                 <div class="content-center">
-                  <div class="h2 title">Hello, I am Kevin.</div>
+                  <div class="h2 title">Hi there, I'm Kevin.</div>
 
-                  <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
-                    <h1>I am a
-                      <span
-                        class="txt-rotate"
-                        data-period="2000"
-                        data-rotate='[ " Financial Analyst.", "n Automation Nerd." ]'></span>
-                    </h1>
+                  <h1>
+                    <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im VipulM.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+                      <span class="wrap"></span>
+                    </a>
+                  </h1>
 
                 </div>
               </div>
