--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Favicon -->
-  <link rel="icon" href="http://example.com/favicon.png">
+  <link rel="icon" href="https://www.freefavicon.com/freefavicons/objects/dice-152-92041.png">
 
 </head>
 
