--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <div class="h2 title">Hi there, I'm Kevin.</div>
 
                   <h1>
-                    <div class="typewriter h1" data-period="2000" data-type='[ "I am a Financial Analyst.", "I am an automation nerd." ]'>
+                    <div class="typewrite" data-period="2000" data-type='[ "I am a Financial Analyst.", "I am an automation nerd." ]'>
                       <span class="wrap"></span>
                     </a>
                   </h1>
