--- a/index.html
+++ b/index.html
@@ -62,24 +62,20 @@
     <div>
       <div class="profile-page">
 
-          <!-- Banner -->
-          <div class="wrapper" id="home">
-            <div class="page-header page-header-small" filter-color="#d0cece">
-              <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;);"></div>
-              <div class="container">
-                <div class="content-center">
-                  <div class="h2 title">Hi there, I'm Kevin.</div>
-
-                  <h1>
-                    <div class="typewrite" data-period="2000" data-type='[ "I am a Financial Analyst.", "I am an automation nerd." ]'>
-                      <span class="wrap"></span>
-                    </a>
-                  </h1>
-
-                </div>
+        <!-- Banner -->
+        <div class="static-slider3">
+          <div class="container">
+            <!-- Row  -->
+            <div class="row justify-content-center">
+              <!-- Column -->
+              <div class="col-md-8 align-self-center text-center">
+                <h1 class="title">I’m Johanthan Doe, an <b class="font-weight-bold">Entreprenuer, Designer & Front-end Developer</b>, Making <span class="text-success-gradiant font-weight-bold typewrite" data-period="2000" data-type='[ "Photoshop", "Web Application", "Web Designing", "Web Development" ]'></span></h1>
+                <a class="btn btn-success-gradiant btn-md text-white border-0 mt-3" href=""><span>Checkout My Work</span></a>
               </div>
+              <!-- Column -->
             </div>
           </div>
+        </div>
 
       <!-- End of profile-page -->
       </div>
