--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
             <div class="row justify-content-center">
               <!-- Column -->
               <div class="col-md-8 align-self-center text-center">
-                <h1 class="title">I’m Johanthan Doe, an <b class="font-weight-bold">Entreprenuer, Designer & Front-end Developer</b>, Making <span class="text-success-gradiant font-weight-bold typewrite" data-period="2000" data-type='[ "Photoshop", "Web Application", "Web Designing", "Web Development" ]'></span></h1>
-                <a class="btn btn-success-gradiant btn-md text-white border-0 mt-3" href=""><span>Checkout My Work</span></a>
+                <h1 class="title">Hi there, I'm Kevin. <br>
+                  <b class="font-weight-bold">Entreprenuer, Designer & Front-end Developer</b>, Making <span class="text-success-gradiant font-weight-bold typewrite" data-period="2000" data-type='[ "Photoshop", "Web Application", "Web Designing", "Web Development" ]'></span></h1>
               </div>
               <!-- Column -->
             </div>
           </div>
         </div>
-        
+
         <!-- End of profile-page -->
       </div>
     </div>
