--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <div class="row justify-content-center">
               <!-- Column -->
               <div class="col-md-8 align-self-center text-center">
-                <h1 class="title">Hi there, I'm Kevin. <br>
-                  <b class="font-weight-bold">Entreprenuer, Designer & Front-end Developer</b>, Making <span class="text-success-gradiant font-weight-bold typewrite" data-period="2000" data-type='[ "Photoshop", "Web Application", "Web Designing", "Web Development" ]'></span></h1>
+                <h1 class="title">Hi there, I'm Kevin. <br><br>
+                  <b class="font-weight-bold">Entreprenuer, Designer & Front-end Developer</b>, I am a <span class="font-weight-bold typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n automation nerd." ]'></span></h1>
               </div>
               <!-- Column -->
             </div>
