--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <!-- Column -->
               <div class="col-md-8 align-self-center text-center">
                 <h1 class="title">Hi there, I'm Kevin. <br><br>
-                  <b class="font-weight-bold">Entreprenuer, Designer & Front-end Developer</b>, I am a <span class="font-weight-bold typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n automation nerd." ]'></span></h1>
+                  I am a<span class="font-weight-bold typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n automation nerd." ]'></span></h1>
               </div>
               <!-- Column -->
             </div>
