--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div class="col-md-8 align-self-center text-center">
                 <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
                 <h1 class="title">Hi there, I'm Kevin. <br><br>
-                  I am a<span class="font-weight-bold typewrite" data-period="2000" data-type='[ " Testing.", " Financial Analyst.", "n automation nerd." ]'></span></h1>
+                  I am a<span class="font-weight-bold typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n automation nerd." ]'></span></h1>
               </div>
               <!-- Column -->
             </div>
