--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="static-slider3">
           <div class="container">
             <!-- Row  -->
-            <div class="row justify-content-center">
+            <div class="row">
               <!-- Column -->
               <div class="col-md-8 align-self-center text-center">
                 <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
