--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
                 <h1>Hi there, I'm Kevin.</h1>
                 <br><br>
-                <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n Accountant.", "  data geek.", "lso an automation nerd." ]'></span></h2>
+                <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n Accountant.", "  data geek.", "n automation nerd." ]'></span></h2>
               </div>
             </div>
           </div>
