--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
 
               </div>
             </div>
-        
-            <!-- End of wrapper -->
           </div>
+        
+          <!-- End of wrapper -->
+        </div>
 
         <!-- End of profile-page -->
       </div>
