--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <link href="./static/css/main.css" rel="stylesheet">
   <script src="./static/js/main.js" defer></script>
   
+  <!-- Favicon -->
+  <link rel="icon" href="https://www.freefavicon.com/freefavicons/objects/dice-152-92041.png">
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -43,10 +45,8 @@
   })(window,document,'script','dataLayer','GTM-MFZ788R');</script>
   <!-- End Google Tag Manager -->
 
-  <!-- Favicon -->
-  <link rel="icon" href="https://www.freefavicon.com/freefavicons/objects/dice-152-92041.png">
-
 </head>
+
 
 <body>
   
@@ -64,10 +64,10 @@
         <!-- Wrapper -->
         <div class=”wrapper”>
 
-          <div class=”page-header clear-filter”>
-            <div class=”rellax-header rellax-header-sky” data-rellax-speed=”-8">
+          <div class="page-header page-header-small" filter-color="#d0cece">
+            <!-- <div class=”rellax-header rellax-header-sky" data-rellax-speed=”-8"> -->
               <div class=”page-header-image” style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
-
+              
                 <!-- Banner -->
                 <div class="static-slider3">
                   <div class="container">
@@ -86,7 +86,7 @@
             </div>
           </div>
         
-          <!-- End of wrapper -->
+          <!-- End of Wrapper -->
         </div>
 
         <!-- End of profile-page -->
