--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <div class="page-header page-header-small" filter-color="#d0cece">
             <!-- <div class=”rellax-header rellax-header-sky" data-rellax-speed=”-8"> -->
             <div class=”page-header-image” style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+            <div class="container">
             
               <!-- Banner -->
               <div class="static-slider3">
@@ -82,6 +83,7 @@
                 </div>
               </div>
 
+            </div>
             </div>
             <!-- </div> -->
           </div>
