--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" defer></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js" defer></script>
 
 
@@ -67,6 +67,7 @@
           <div class="page-header page-header-small" filter-color="#d0cece">
             <!-- <div class=”rellax-header rellax-header-sky" data-rellax-speed=”-8"> -->
             <div class=”page-header-image” style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+
             <div class="container">
             
               <!-- Banner -->
@@ -83,12 +84,12 @@
                 </div>
               </div>
 
+              <!-- End of container -->
             </div>
-            </div>
-            <!-- </div> -->
+
           </div>
         
-          <!-- End of Wrapper -->
+          <!-- End of wrapper -->
         </div>
 
         <!-- End of profile-page -->
