--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Wrapper -->
         <div class=”wrapper”>
 
-          <div class="page-header page-header-small" filter-color="#d0cece">
+          <!-- <div class="page-header page-header-small" filter-color="#d0cece"> -->
             <!-- <div class=”rellax-header rellax-header-sky" data-rellax-speed=”-8"> -->
             <div class=”page-header-image” style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
 
@@ -87,7 +87,7 @@
               <!-- End of container -->
             </div>
 
-          </div>
+          <!-- </div> -->
         
           <!-- End of wrapper -->
         </div>
