--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="static-slider3">
                   <div class="container">
                     <div class="row justify-content-center">
-                      <div class="col-4 align-self-center text-center">
+                      <div class="align-self-center text-center">
                         <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
                         <h1>Hi there, I'm Kevin.</h1>
                         <br><br>
