--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div class="container">
             
-              <!-- Banner 
+              <!-- Banner -->
               <div class="static-slider3">
                 <div class="container">
                   <div class="row justify-content-center">
@@ -82,7 +82,7 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
 
               <!-- End of container -->
             </div>
