--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
         <div class=”wrapper”>
 
           <div class="page-header" filter-color="#d0cece">
-            <div class=”rellax-header rellax-header-sky” data-rellax-speed=”-8">
-              <div class="page-header-image" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+            <div class=”rellax-header rellax-header-sky” data-rellax-speed="-8">
+              <div class="hero-image"></div>
+              <!-- <div class="page-header-image" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div> -->
             </div>
             
             <!-- Container -->
