--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
           <div class="hero-image">
           <!-- <div class="page-header-image" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div> -->
 
-            <!-- Container -->
+            <!-- Banner 
             <div class="container">
-              <!-- Banner -->
               <div class="static-slider3">
                 <div class="container">
                   <div class="row justify-content-center">
@@ -82,10 +81,10 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
           </div>
-          
+
           <!-- End of wrapper -->
         </div>
 
