--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="hero-image">
   <!-- <div class="page-header-image" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div> -->
 
-    <!-- Banner 
+    <!-- Banner -->
     <div class="container">
       <div class="static-slider3">
         <div class="container">
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
   </div>
 
