--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="container">
       <div class="static-slider3">
         <div class="container">
-          <div class="row justify-content-center">
-            <div class="align-self-center text-center">
+          <div class="row">
+            <div class="col">
               <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
               <br><br>
               <h1>Hi there, I'm <b>Kevin</b>.</h1>
