--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="static-slider3">
         <div class="container">
           <div class="row">
-            <div class="col">
+            <div class="align-self-center text-center">
               <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
               <br><br>
               <h1>Hi there, I'm <b>Kevin</b>.</h1>
