--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="static-slider3">
         <div class="row justify-content-center">
-          <div class="col-4 align-self-center text-center">
+          <div class="col-4">
             <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
             <h1 class="h1title">Hi there, I'm <b>Kevin</b>.</h1>
             <br><br>
