--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         c0-73.571-41.689-109.131-99.935-109.131s-82.769,45.369-82.769,45.369v-36.99H279.195z"></path></svg>
       </a>
     </div>
-    <img data-src="images/me/me-storm.png" src="./Botond Raduly_files/me-storm.png" id="stormtrooper" alt="Botond Raduly Stormtrooper" style="left: -449px;">
+    <img data-src="images/me/me-storm.png" src="./static/images/me-storm.png" id="stormtrooper" alt="Botond Raduly Stormtrooper" style="left: -449px;">
   </div>
   <!-- End Contact -->
 
