--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
 
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
-    <p class="contact-supratitle me-text-shadow-sm me-text-center me-white-text">LET'S MAKE SOMETHING AWESOME TOGETHER. GET IN</p>
-    <h2 class="me-white-text me-text-shadow-sm">CONTACT</h2>
+    <p class="contact-supratitle me-text-shadow-sm me-text-center me-white-text">LET'S MAKE SOMETHING AWESOME TOGETHER.</p>
     <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0);">
       <span><strong>I am</strong> <br>the droid <b>you</b><br> are looking <br>for!</span>
     </div>
