--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
   <!-- About Me -->
-  <div class="contact module me-turquoise" id="about">
+  <div class="about-module me-accelerate module me-white-bg" id="about-me">
     <h2>ABOUT ME</h2>
     <p>Highly motivated front-end developer with international client portfolio. I started to learn programming on my own at age 11, from an old book and with no computer. Driven and permanently curious, I am now specialized in fixing front-end issues that other technology providers can't manage.</p>
   </div>
