--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script src="./static/js/main.js" defer></script>
   
   <!-- Favicon -->
-  <link rel="icon" href="https://image.pngaaa.com/240/1327240-middle.png">
+  <link rel="icon" href="https://lh3.googleusercontent.com/proxy/_zbyiRrVFch2NIYMZ1GKK7NcQFOzKtpuudWfkcTtwklmE78dBcN2CMmW1XUCfpnaF1BPs6FW8vogssChPkgz7yuZGWaLHMmqNnRM7mHtNwNnjURKb9MZK8W9NKbupyNmNcRwUyoK">
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
