--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 
 
-<body>
+<body class="me-black-bg me-noselect" id="top">
   
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZ788R"
