--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 
 
-<body class="me-black-bg me-noselect" id="top">
+<body class="me-noselect" id="top">
   
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFZ788R"
@@ -99,7 +99,7 @@
             <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
             <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
           </div>
-          
+
         </div>
       </div>
 
